Cloud config added at `date`

--- a/FileStorageDB/src/main/resources/application.properties
+++ b/FileStorageDB/src/main/resources/application.properties
@@ -1,6 +1,2 @@
-kafka.broker.url=localhost:9092
-server.port = 8081
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=fileStorageInfo
-spring.cloud.config.enabled=false
+spring.application.name=file-storage-db
+spring.config.import=optional:configserver:http://localhost:8000
