--- a/CloudStorage/src/main/resources/application.properties
+++ b/CloudStorage/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-kafka.broker.url=localhost:9092
+spring.application.name=cloud-storage
+spring.config.import=optional:configserver:http://localhost:8000
