--- a/CloudStorage/src/main/resources/application.properties
+++ b/CloudStorage/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=cloud-storage
 spring.config.import=optional:configserver:http://localhost:8000
+eureka.client.serviceUrl.defaultZone = http://localhost:8010/eureka
